--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/Theme.Thirty">
+        <activity android:name=".models.ResultActivity"></activity>
         <activity android:name=".activities.GameActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
